# uncharted-ta1-pipeline

./: .gitignore  LICENSE  Makefile  README.md  pyrightconfig.json  run_pipelines.py
cdr/: chaining_result_subscriber.py  json_log.py  mapper.py  pyproject.toml  request_publisher.py  requirements.txt  result_subscriber.py  server.py
cdr/deploy/: Dockerfile  build.sh  build_all.sh  docker-compose.j2  docker-compose.yml  gen_compose.sh  push_containers.sh  run.sh  tag_containers.sh  tag_local_container.sh  vars.json  vars_example.json
pipelines/geo_referencing/: README.md  factory.py  georeferencing_pipeline.py  output.py  pipeline.py  pipeline_input_utils.py  pyproject.toml  requirements.txt  run_pipeline.py  run_server.py  setup.py
pipelines/geo_referencing/deploy/: Dockerfile  build.sh  run.sh  run_eval.sh  run_eval_no_clues.sh  run_gpu.sh
pipelines/geo_referencing/docker/: Dockerfile  Dockerfile_tasks  build.sh  docker-compose.yml  docker_build.sh  run.sh
pipelines/geo_referencing/test/: test_output.py
pipelines/metadata_extraction/: README.md  metadata_extraction_pipeline.py  pyproject.toml  requirements.txt  run_pipeline.py  run_scoring.py  run_server.py  scorer.py  setup.py
pipelines/metadata_extraction/data/: ground_truth.jsonl  ground_truth_v2.jsonl  ground_truth_v2_wip.jsonl
pipelines/metadata_extraction/deploy/: Dockerfile  build.sh  docker-compose.yml  run.sh  run_gpu.sh
pipelines/metadata_extraction/results/: baseline_output.txt  extractions_v3_score.jsonl  v4_scores.jsonl  v4_scores.txt
pipelines/metadata_extraction/test/: test_metadata_extraction_pipeline.py  test_raster_id_metadata_extraction.gpkg  test_raster_id_metadata_extraction.pkg
pipelines/metadata_extraction/working/extractions/: baseline_v3.jsonl
pipelines/metadata_extraction/working/full_ocr_processed/: 10011.pkl  10013.pkl  10056.pkl  10058.pkl  10078.pkl  10203.pkl  103473.pkl  10565.pkl  10625.pkl  10690.pkl  10698.pkl  10772.pkl  10796.pkl  10858.pkl  10880.pkl  10891.pkl  10926.pkl  10953.pkl  10984.pkl  11000.pkl  11193.pkl  11229.pkl  11263.pkl  11264.pkl  11664.pkl  11677.pkl  11919.pkl  11950.pkl  11976.pkl  11978.pkl  11980.pkl  11991.pkl  11992.pkl  11993.pkl  11995.pkl  12123.pkl  12252.pkl  13461.pkl  13650.pkl  1388.pkl  (+268 more)
pipelines/metadata_extraction/working/ocr_output/: 10011.pkl  10013.pkl  10056.pkl  10058.pkl  10078.pkl  10203.pkl  103473.pkl  10565.pkl  10625.pkl  10690.pkl  10698.pkl  10772.pkl  10796.pkl  10858.pkl  10880.pkl  10891.pkl  10926.pkl  10953.pkl  10984.pkl  11000.pkl  11193.pkl  11229.pkl  11263.pkl  11264.pkl  11664.pkl  11677.pkl  (+290 more)
pipelines/point_extraction/: README.md  point_extraction_pipeline.py  pyproject.toml  requirements.txt  run_pipeline.py  run_server.py
pipelines/point_extraction/deploy/: Dockerfile  build.sh  run.sh  run_eval.sh  run_eval_no_clues.sh  run_gpu.sh
pipelines/segmentation/: .env  Dockerfile  Dockerfile_tasks  README.md  cascade_layoutlmv3_lara.yaml  docker-compose.yml  docker_build.sh  env_defaults.py  env_vars.py  inference_example.py  pyproject.toml  requirements.txt  run_app.py  run_pipeline.py  run_server.py  s3_data_cache.py  segmentation_pipeline.py
pipelines/segmentation/data/: cascade_layoutlmv3_lara.yaml
pipelines/segmentation/deploy/: Dockerfile  build.sh  run.sh  run_gpu.sh
pipelines/segmentation/legend_and_map/: env_vars.py  requirements.txt  run_app.py
tasks/: README.md  pyproject.toml  setup.py
tasks/common/: image_cache.py  image_io.py  io.py  pipeline.py  queue.py  request_client.py  result_subscriber.py  s3_data_cache.py  task.py
tasks/common/test/: test_image_cache.py  test_io.py  test_s3_data_cache.py
tasks/detection/: README.md  entities.py  label_map.py  loaders.py  point_detector.py  run_pipeline.py  setup.py  tiling.py  utils.py
tasks/detection/pytorch/: mobilenet_rcnn.py  utils.py
tasks/geo_referencing/: coordinates_extractor.py  corner_point_extractor.py  entities.py  filter.py  finalize_coordinates.py  geo_coordinates.py  geo_fencing.py  geo_projection.py  geocode.py  georeference.py  ground_control.py  inference.py  latlon_extractor.py  outlier_filter.py  pixel_alignment.py  point_geocoder.py  requirements.txt  roi_extractor.py  roi_filter.py  scale_analyzer.py  setup.cfg  state_plane_extractor.py  task.py  text_extraction.py  util.py  utm_extractor.py
tasks/geo_referencing/src/: coordinates_extractor.py  georeference.py  roi_extractor.py  text_extraction.py
tasks/io/: io.py
tasks/metadata_extraction/: entities.py  geocoder.py  geocoding_service.py  metadata_extraction.py  scale.py  text_filter.py
tasks/metadata_extraction/test/: test_text_filter.py
tasks/metadata_extraction/util/: download_cloudfront_maps.py  sort_metadata_jsonl.py
tasks/point_extraction/: entities.py  finalize_point_extractions.py  label_map.py  legend_analyzer.py  legend_item_utils.py  loaders.py  point_extractor.py  point_extractor_utils.py  point_orientation_extractor.py  task_config.py  template_match_point_extractor.py  tiling.py  utils.py
tasks/point_extraction/pytorch/: mobilenet_rcnn.py  utils.py
tasks/segmentation/: README.md  denoise_segments.py  detectron_segmenter.py  entities.py  requirements.txt  segmenter_utils.py  setup.cfg  text_with_segments.py
tasks/segmentation/ditod/: backbone.py  beit.py  config.py  dataset_mapper.py  deit.py  icdar_evaluation.py  mycheckpointer.py  mytrainer.py
tasks/segmentation/layoutlmft/: __init__.py
tasks/segmentation/legend_and_map/: .env  detectron_segmenter.py  env_vars.py  requirements.txt  run_app.py  segmentation_result.py
tasks/segmentation/src/: detectron_segmenter.py
tasks/text_extraction/: .dockerignore  README.md  entities.py  example_main.py  requirements.txt  setup.cfg  text_extractor.py
tasks/text_extraction/ocr/: cloud_authenticator.py  google_vision_ocr.py
tasks/text_extraction/schema/: README.md
tasks/text_extraction/src/: example_main.py  image_io.py  text_extractor.py  tile.py
tasks/text_extraction/test/: test_text_extractor.py
tasks/text_extraction_2/: entities.py  gva_ocr.py  ocr_util.py  run_view_ocr.py
(+391 files in other folders)
