[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lara-cdr"
version = "0.1.0"
description = "LARA CDR integration supporting both one-off processing and webhook event-driven processing"
readme = "README.md"
dependencies = ["jsons", "flask", "lara-tasks", "mypy-boto3-s3", "rasterio", "ngrok", "pyproj", "coloredlogs"]

[project.optional-dependencies]
development = [
    "jinja2"
]

[tool.setuptools.packages]
find = {}
