[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lara-tasks"
version = "0.1.0"
description = "LARA pipeline tasks"
readme = "README.md"
dependencies = [
    "numpy",
    "tqdm",
    "pydantic",
    "tiktoken",
    "openai",
    "google-cloud-vision",
    "grpcio",
    "boto3",
    "types-boto3",
    "pillow",
    "geopy",
    "matplotlib",
    "opencv-python>=4.8",
    "protobuf",
    "scikit_image",
    "scikit_learn",
    "Shapely",
    "utm",
    "parmap",
    "scipy"
]

[project.optional-dependencies]
segmentation=[
    "torch==2.0.1",
    "torchvision==0.15.2",
    "detectron2 @ git+https://github.com/facebookresearch/detectron2.git",
    "transformers",
    "timm"
]
point = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "scipy",
    "ultralytics"
]

[tool.setuptools.packages]
find = {}


[tool.pyright]
ignore = [
    "**/segmentation/ditod",
    "**/segmentation/layoutlmft"
]
# ignoring missing imports because of the optinal dependencies and manual
# detectron installation
reportMissingImports = false