[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lara-point-extraction"
version = "0.1.0"
description = "LARA point extraction pipeline and server"
readme = "README.md"
dependencies = ["flask", "mypy-boto3-s3", "lara-tasks"]

[tool.setuptools.packages]
find = {}
