[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lara-map-segmentation"
version = "0.1.1"
description = "LARA map segmentation pipeline and server"
readme = "README.md"
dependencies = ["flask", "mypy-boto3-s3", "lara-tasks[segmentation]"]

[tool.setuptools.packages]
find = {}
