[metadata]
name = lara_geo_referencing
version = 0.1.0
author = uncharted software
description = Geo Referencing
long_description = file:README.md
long_description_content_type = text/markdown

[options]
install_requires = 
    geopy==2.2.0
    jsons==1.6.3
    matplotlib==3.8.0
    numpy==1.23.2
    opencv_python==4.5.5.62
    Pillow==9.2.0
    protobuf==4.24.4
    scikit_image==0.19.3
    scikit_learn==1.1.2
    Shapely==1.8.4
    utm==0.7.0

[options.packages.find]
where=src

