[metadata]
name = lara_segmentation
version = 0.1.0
author = uncharted software
description = Legend and Map Segmentation
long_description = file:README.md
long_description_content_type = text/markdown

[options]
install_requires = 
    datasets==1.15.1
    transformers==4.34.0
    seqeval==1.2.2
    deepspeed==0.5.7
    tensorboard==2.7.0
    seqeval==1.2.2
    sentencepiece
    timm==0.4.12
    Pillow==10.0.1
    einops==0.7.0
    textdistance==4.6.0
    shapely==2.0.2
    pydantic==2.4.2
    opencv-python==4.8.1.78
    detectron2 @ git+https://github.com/facebookresearch/detectron2.git

[options.packages.find]
where=src

